<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="24dp">

        <ImageView
            android:id="@+id/empty_state_ic"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/empty_state_icon"
            android:src="@drawable/ic_empty_box"
            app:tint="?attr/colorPrimary" />

        <TextView
            android:id="@+id/empty_state_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/ooops"
            android:textAppearance="@style/TextAppearance.Courier.EmptyTitle" />

        <TextView
            android:id="@+id/empty_state_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/no_config_found"
            android:textAppearance="@style/TextAppearance.Courier.EmptySubtitle" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/empty_state_btn"
            style="@style/Widget.Courier.Button.Tonal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/import_configuration" />
    </LinearLayout>

    <com.leinardi.android.speeddial.SpeedDialView
        android:id="@+id/fab_empty_config"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        app:sdMainFabClosedSrc="@drawable/ic_add" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>